--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,94 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+-webkit-font-smoothing: antialiased;
+-moz-osx-font-smoothing: grayscale;
+  margin: 0;
+}
+
+.container,.questionContainer {
+  margin: 1rem;
+  text-align: center;
+}
+
+.nav {
+  display: flex;
+  justify-content: baseline;
+  align-items: baseline;
+  gap: 2rem;
+  width: 100%;
+  /* padding: 0 2rem; */
+}
+
+.iqgen-title {
+  font-size: 3rem;
+}
+
+.nav ul {
+  padding: 0 2rem;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  gap: 0.2rem;
+}
+
+.nav a {
+  color: rgb(0, 162, 237);
+  text-decoration: none;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: .5rem;
+}
+
+.nav a:active, a:hover, a:focus{
+  color: white;
+  background-color: rgb(0, 162, 237);
+}
+
+.nav li:active {
+  color: white;
+  background-color: rgb(0, 162, 237);
+}
+
+button {
+  float: center;
+}
+
+.nav li:hover{
+  color:white;
+  background-color: rgb(0, 162, 237);
+} 
+
+table{
+  text-align: center;
+}
+
+h2 {
+  margin-bottom: 1rem !important;
+}
+
+.banner {
+  padding: 60px;
+  text-align: center;
+  background: #3abc1a;
+  color: white;
+  font-size: 30px;
+}
+
+
+.footer {
+  padding: 30px;
+  text-align: center;
+  background: yellow;
+  color: rgb(8, 6, 6);
+  font-size: 20px;
+  vertical-align: bottom;
+  width: auto;
+  height: 30px;
 }
